<resources>
    <string name="app_name">PopularMovies2</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="user_rating">User Rating:</string>
    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
</resources>
